--- a/index.html
+++ b/index.html
@@ -150,5 +150,70 @@
         </div>
       </div>
     </div>
+
+    <div class="container mt-5 text-light">
+      <h3>Trending Now</h3>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media1.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media10.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media11.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media12.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media13.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media14.webp" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media1.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media10.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media11.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media12.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media13.jpg" class="d-block w-100" alt="..." />
+              </div>
+              <div class="col col-sm-6 col-md-4 col-lg-2">
+                <img src="./assets/media/media14.webp" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
