--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </a>
 
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                <li><a class="dropdown-item" href="./editProfile.html">Edit Profile</a></li>
                 <li><a class="dropdown-item" href="#">Settings</a></li>
                 <li><a class="dropdown-item" href="#">Logout</a></li>
               </ul>
@@ -109,7 +109,7 @@
         <h1 class="me-5">Tv Shows</h1>
         <div class="dropdown">
           <button
-            class="btn btn-secondary dropdown-toggle mx-2"
+            class="btn btn-secondary dropdown-toggle"
             type="button"
             id="dropdownMenuButton"
             data-bs-toggle="dropdown"
