--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <div class="container vertical-align-center bg-body-dark text-light mt-5">
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="me-5">Tv Shows</h1>
+        <h1>Tv Shows</h1>
         <div class="dropdown">
           <button
             class="btn btn-secondary dropdown-toggle"
@@ -157,7 +157,7 @@
     </div>
 
     <div class="container mt-5 text-light">
-      <h3>Trending Now</h3>
+      <h3 class="text-sm-center text-md-start">Trending Now</h3>
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -217,7 +217,7 @@
     </div>
 
     <div class="container text-light mt-4">
-      <h3>Watch It Again</h3>
+      <h3 class="text-sm-center text-md-start">Watch It Again</h3>
       <div id="carouselExample2" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -277,7 +277,7 @@
     </div>
 
     <div class="container text-light mt-4">
-      <h3>New Release</h3>
+      <h3 class="text-sm-center text-md-start">New Release</h3>
       <div id="carouselExample3" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
