--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-dark">
+    <nav class="navbar navbar-expand-lg bg-body-dark ms-2">
       <div class="container-fluid px-0">
         <a class="navbar-brand" href="#"><img src="./netflix_logo.png" alt="logo" width="100px" /></a>
         <button
@@ -71,7 +71,7 @@
             </svg>
             <span class="mx-2">KIDS</span>
 
-            <div class="dropdown">
+            <div class="dropdown me-3">
               <a
                 class="btn btn-dark dropdown-toggle"
                 href="#"
@@ -104,10 +104,10 @@
       </div>
     </nav>
 
-    <div class="container vertical-align-center bg-body-dark text-light mt-5">
-      <div class="d-flex justify-content-between align-items-center mb-3">
+    <div class="container bg-body-dark text-light mt-5">
+      <div class="d-flex align-items-center mb-3">
         <h1>Tv Shows</h1>
-        <div class="dropdown">
+        <div class="dropdown ms-3">
           <button
             class="btn btn-secondary dropdown-toggle"
             type="button"
