--- a/editProfile.html
+++ b/editProfile.html
@@ -13,6 +13,47 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-dark ms-2">
+      <div class="container-fluid px-0">
+        <a class="navbar-brand" href="#"><img src="./netflix_logo.png" alt="logo" width="100px" /></a>
+      </div>
+    </nav>
+
+    <div class="container text-center text-light border-bottom border-light">
+      <h1>Edit Profile</h1>
+    </div>
+
+    <div class="container mt-4 justify-content-center border-bottom border-light">
+      <div class="card mb-3 bg-body-dark" style="max-width: 350px">
+        <div class="row g-0 bg-body-dark">
+          <div class="col-md-4 bg-dark">
+            <img src="./avatar.png" class="img-fluid rounded-start" alt="avatar" />
+          </div>
+          <div class="col-md-8 bg-dark">
+            <div class="card-body bg-dark text-light">
+              <button type="button" class="btn btn-secondary">Strive Student</button>
+              <p class="card-text">Lenguage</p>
+              <div class="dropdown">
+                <button
+                  class="btn btn-secondary dropdown-toggle"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Italiano
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Tedesco</a></li>
+                  <li><a class="dropdown-item" href="#">Inglese</a></li>
+                  <li><a class="dropdown-item" href="#">Spagnolo</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
